# llm-router

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh-CN.md  alembic.ini  pyproject.toml
.github/workflows/: docker-release.yml
docker/: entrypoint.sh
docker/local/: docker-compose.yaml
docker/server/: docker-compose.yaml  init.sql
docs/: alembic.md  dual-cache.md  timezone.md
docs/architecture/: llm-router-architecture.md
docs/llm-protocols/: anthropic_protocol.md  openai_protocol.md  partial_mode_conversion.md
docs/plans/: plan_api_cache.md  plan_router.md
migrations/: env.py
migrations/1.0.0/: migration_mysql_1.0.0.sql  migration_sqlite_1.0.0.sql
migrations/1.0.1/: migration_mysql_1.0.1.sql  migration_sqlite_1.0.1.sql
migrations/1.0.2/: migration_mysql_1.0.2.sql  migration_sqlite_1.0.2.sql
migrations/mysql/: 2026_04.sql  2026_05.sql  2026_06.sql
migrations/sqlite/: 2026_04.sql  2026_05.sql  2026_06.sql
migrations/versions/: 05167ff0ec5d_initial_schema.py
src/llm_router/: cli.py  exception_handlers.py  lifespan.py  main.py  middleware.py
src/llm_router/api/: __init__.py  admin.py  anthropic.py  health.py  openai.py
src/llm_router/core/: admin_users.py  config.py  database.py  logging_config.py  security.py
tests/: test_admin_playground.py  test_billing.py  test_config.py  test_cross_protocol_streaming.py  test_dual_cache.py  test_gateway.py  test_http_client.py  test_middleware.py  test_model_visibility.py  test_payload_overrides.py  test_protocol_converter.py  test_request_logging_handlers.py  test_router.py
(+61 files in other folders)
