[project]
name = "llm-router"
version = "0.1.0"
description = "LLM routing gateway with local and server modes"
readme = "README.md"
authors = [
    { name = "liuzhenghua-jk", email = "liuzhenghua-jk@qifu.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiomysql>=0.2.0",
    "cryptography>=45.0.0",
    "fastapi>=0.115.0",
    "greenlet>=3.2.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
llm-router = "llm_router.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
